[package]
name = "iter_seq"
version = "0.2.1"
edition = "2021"
authors = ["Yegor Vaskonyan <yegor.vaskonyan@gmail.com>"]
description = "Stateless, transformable, abstract sequences of values"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yegorvk/iter_seq"
readme = "README.md"
keywords = ["no_std", "sequence", "iterator", "iter"]
categories = ["no-std::no-alloc", "data-structures"]

[dependencies]
typenum = { version = "1.18.0", features = ["const-generics"] }
sealed = "0.6.0"

[dev-dependencies]
itertools = "0.14.0"